--- a/package.json
+++ b/package.json
@@ -1,15 +1,23 @@
 {
-  "name": "front-henry",
+  "name": "client",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.16.4",
-    "@testing-library/react": "^13.3.0",
-    "@testing-library/user-event": "^13.5.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "@testing-library/jest-dom": "^5.11.6",
+    "@testing-library/react": "^11.2.1",
+    "@testing-library/user-event": "^12.2.2",
+    "axios": "^0.27.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.1",
+    "react-redux": "^8.0.1",
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "^5.0.1",
+    "redux": "^4.1.2",
+    "redux-thunk": "^2.4.1",
+    "styled-components": "^5.3.3",
+    "thunk": "^0.0.1",
+    "web-vitals": "^0.2.4",
+    "webpack": "^5.72.1"
   },
   "scripts": {
     "start": "react-scripts start",
