--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "axios": "^0.27.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.1",
+    "react-icons": "^4.4.0",
     "react-redux": "^8.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^5.0.1",
@@ -18,7 +19,8 @@
     "styled-components": "^5.3.3",
     "thunk": "^0.0.1",
     "web-vitals": "^0.2.4",
-    "webpack": "^5.72.1"
+    "webpack": "^5.72.1",
+    "yarn": "^1.22.19"
   },
   "scripts": {
     "start": "react-scripts start",
