--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "@testing-library/react": "^11.2.1",
     "@testing-library/user-event": "^12.2.2",
     "axios": "^0.27.1",
+    "bootstrap": "^5.1.3",
     "fullcalendar": "^5.11.0",
     "react": "^17.0.2",
+    "react-bootstrap": "^2.4.0",
     "react-dom": "^17.0.1",
     "react-icons": "^4.4.0",
     "react-redux": "^8.0.1",
