--- a/package.json
+++ b/package.json
@@ -18,11 +18,12 @@
     "fullcalendar": "^5.11.0",
     "react": "^17.0.2",
     "react-bootstrap": "^2.4.0",
-    "react-dom": "^17.0.1",
+    "react-dom": "^17.0.2",
     "react-icons": "^4.4.0",
     "react-redux": "^8.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^5.0.1",
+    "reactstrap": "^9.1.1",
     "redux": "^4.1.2",
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.4.1",
