--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.4.1",
     "styled-components": "^5.3.5",
+    "sweetalert": "^2.1.2",
     "thunk": "^0.0.1",
     "web-vitals": "^0.2.4",
     "webpack": "^5.72.1",
