--- a/package.json
+++ b/package.json
@@ -24,9 +24,11 @@
     "react-bootstrap": "^2.4.0",
     "react-dom": "^17.0.1",
     "react-icons": "^4.4.0",
+    "react-loader-spinner": "^5.1.5",
     "react-redux": "^8.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^5.0.1",
+    "react-spinners": "^0.13.3",
     "reactstrap": "^9.1.1",
     "redux": "^4.1.2",
     "redux-devtools-extension": "^2.13.9",
